# baseus-desktop

./: .gitignore  BACKLOG.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
.playwright-mcp/: page-2026-05-14T10-02-42-101Z.yml  page-2026-05-14T10-07-20-821Z.yml
.superpowers/brainstorm/111647-1778759456/content/: dashboard-mockup.html  design-direction.html  features.html
.superpowers/brainstorm/111647-1778759456/state/: server-stopped
.superpowers/brainstorm/96032-1778748129/content/: full-design.html  layout-direction.html
.superpowers/brainstorm/96032-1778748129/state/: server-stopped
apps/baseus-app/: index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/baseus-app/src/: App.tsx  index.css
apps/baseus-app/src-tauri/: Cargo.toml  tauri.conf.json
apps/baseus-app/src-tauri/src/: commands.rs  device.rs  lib.rs  main.rs  settings.rs  tray.rs
apps/baseus-app/src/components/: AncButton.tsx  AncTab.tsx  BatteryCard.tsx  BudCard.tsx  CaseCard.tsx  ConnectionCard.tsx  EqTab.tsx  FindButton.tsx  GesturesTab.tsx  HomeTab.tsx  SettingRow.tsx  SettingsTab.tsx  Sidebar.tsx  SparkLine.tsx
apps/baseus-app/src/lib/: tauri.ts  timer.ts
apps/baseus-app/src/stores/: batteryHistory.ts  settings.ts
crates/baseus-protocol/: Cargo.toml
crates/baseus-protocol/src/: framing.rs  lib.rs  types.rs
crates/baseus-protocol/src/models/: bp1_pro_anc.rs  inspire_xh1.rs  mod.rs
crates/baseus-transport/: Cargo.toml
crates/baseus-transport/examples/: connect.rs
crates/baseus-transport/src/: lib.rs
crates/baseus-transport/src/win/: ble.rs  rfcomm.rs
docs/: re-methodology.md
docs/frida/: analyze_apk.py  androguard_analyze.py  androguard_bytecode.py  ccsdk-init-probe.js  ccsdk-init2.js  ccsdk-probe.js  dump-all.js  enum-classes.js  eq-gesture-dump.js  eq-static-extract.js  extract_btsnoop.py  find_battery_opcode.py  find_device_battery_sender.py  protocol-dump.js  run_enum.py  socket-trace.js  test_java.py
docs/protocol/: bp1-pro-anc.md  framing.md  inspire-xh1.md
docs/protocol/captures/: .gitignore  battery-opcode.txt  battery-sender.txt  bytecode-dump.txt  bytecode-dump2.txt
docs/superpowers/plans/: 2026-05-13-baseus-desktop-client.md  2026-05-14-dashboard-redesign.md  2026-05-14-ui-redesign.md
docs/superpowers/specs/: 2026-05-14-dashboard-redesign-design.md  2026-05-14-ui-redesign-design.md  2026-07-03-bp1-ux-glowup-design.md
docs/superpowers/specs/assets/: bp1-ux-preview.html
tools/: extract_apk_model.py
