[workspace]
members = [
    "crates/baseus-protocol",
    "crates/baseus-transport",
    "apps/baseus-app/src-tauri",
]
resolver = "2"

[workspace.dependencies]
tokio       = { version = "1", features = ["full"] }
thiserror   = "2"
tracing     = "0.1"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
