[package]
name    = "baseus-transport"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { workspace = true }
tokio     = { workspace = true }
tracing   = { workspace = true }

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Devices_Bluetooth",
    "Devices_Bluetooth_Rfcomm",
    "Devices_Enumeration",
    "Foundation",
    "Networking_Sockets",
    "Storage_Streams",
] }
