[package]
name = "baseus-app"
version = "0.3.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "baseus_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
serde = { workspace = true }
serde_json = { workspace = true }
baseus-protocol  = { path = "../../../crates/baseus-protocol" }
baseus-transport = { path = "../../../crates/baseus-transport" }
tokio    = { workspace = true }
tracing  = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs-next = "2"

